Fix compilation error and deprecation warnings under Java 9